force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/AR_Surg_Accounts_Receivable__c.object-meta.xml
<CustomObject>
    <label>Surgical Accounts Receivable</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Surgical Accounts Receivables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>