force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/Adjustment_Code_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Code_1_Description__c</fullName>
    <label>Denial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>