force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Amount__c.field-meta.xml
<CustomField>
    <fullName>AR_Amount__c</fullName>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>