force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Attending_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>AR_Attending_Provider_Id__c</fullName>
    <label>Attending Provider Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>