force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Date_Worked__c.field-meta.xml
<CustomField>
    <fullName>AR_Date_Worked__c</fullName>
    <label>Date Worked</label>
    <type>Date</type>
</CustomField>