force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Debit_Id__c.field-meta.xml
<CustomField>
    <fullName>AR_Debit_Id__c</fullName>
    <label>Debit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>