force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>AR_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>