force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>AR_Expected_Amount__c</fullName>
    <label>Expected Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>