force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Financial_Class__c.field-meta.xml
<CustomField>
    <fullName>AR_Financial_Class__c</fullName>
    <label>Financial Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>