force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Insurance_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>AR_Insurance_Adjustments__c</fullName>
    <label>Insurance Adjustments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>