force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Last_Billed_Date__c.field-meta.xml
<CustomField>
    <fullName>AR_Last_Billed_Date__c</fullName>
    <label>Last Billed Date</label>
    <type>Date</type>
</CustomField>