force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Modifier1_Code__c.field-meta.xml
<CustomField>
    <fullName>AR_Modifier1_Code__c</fullName>
    <label>Modifier1 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>