force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Note__c.field-meta.xml
<CustomField>
    <fullName>AR_Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>