force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>AR_Patient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AR_Surgical_Accounts_Receivables</relationshipName>
    <type>Lookup</type>
</CustomField>