force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Patient_Guid__c.field-meta.xml
<CustomField>
    <fullName>AR_Patient_Guid__c</fullName>
    <label>Patient Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>