force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>AR_Payer_Id__c</fullName>
    <label>Payer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>