force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Priority_Status__c.field-meta.xml
<CustomField>
    <fullName>AR_Priority_Status__c</fullName>
    <label>Priority Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>F/U</fullName>
            </value>
            <value>
                <fullName>DND</fullName>
            </value>
            <value>
                <fullName>OLD</fullName>
            </value>
            <value>
                <fullName>mPMTDUE</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
            </value>
            <value>
                <fullName>HIGH $ (DOLLAR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>