force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Provider__c.field-meta.xml
<CustomField>
    <fullName>AR_Provider__c</fullName>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>