force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Responsibile_Party_Relationship__c.field-meta.xml
<CustomField>
    <fullName>AR_Responsibile_Party_Relationship__c</fullName>
    <label>Responsibile Party Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>