force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>AR_Responsibility__c</fullName>
    <label>Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>