force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>AR_Team_Name__c</fullName>
    <formula>TEXT( Owner:User.Day_Planner_Team__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Name</label>
    <type>Text</type>
</CustomField>