force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/AR_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>AR_Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>