force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/Expected_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount_Formula__c</fullName>
    <formula>VALUE(AR_Expected_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected  Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>