force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/Mulesoft_Time__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Time__c</fullName>
    <description>This field is for Mulesoft to update the timestamp</description>
    <label>Mulesoft Time</label>
    <type>Time</type>
</CustomField>