force-app/main/default/objects/AR_Surg_Accounts_Receivable__c/fields/Surgical_Workbook_Category__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Workbook_Category__c</fullName>
    <label>Surgical Workbook Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excluding PIP WC</fullName>
            </value>
            <value>
                <fullName>Including PIP WC</fullName>
            </value>
            <value>
                <fullName>Self Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>